@@ -24,8 +24,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
 
-import com.google.common.base.Predicates;
-import com.google.common.collect.Iterables;
+import com.empconn.constants.ApplicationConstants;
 import com.empconn.dto.allocation.AllocationRequestDto;
 import com.empconn.dto.allocation.AllocationSummaryDto;
 import com.empconn.dto.allocation.ExistingAllocationDto;
@@ -54,13 +53,14 @@ import com.empconn.persistence.entities.WorkGroup;
 import com.empconn.repositories.AllocationRepository;
 import com.empconn.repositories.EmployeeRepository;
 import com.empconn.repositories.NDRequestRepository;
-import com.empconn.repositories.NdRequestSalesforceIdentifierRepository;
 import com.empconn.repositories.ProjectLocationRespository;
 import com.empconn.repositories.ProjectRepository;
 import com.empconn.repositories.SalesforceIdentifierRepository;
 import com.empconn.repositories.WorkGroupRepository;
 import com.empconn.repositories.specification.NDAllocateSpecification;
 import com.empconn.vo.UnitValue;
+import com.google.common.base.Predicates;
+import com.google.common.collect.Iterables;
 
 @Service
 @Transactional
@@ -107,8 +107,6 @@ public class AllocateNDService {
 	@Autowired
 	private AllocationService allocationService;
 
-	@Autowired
-	private NdRequestSalesforceIdentifierRepository ndRequestSalesforceIdentifierRepository;
 
 	public List<NdRequestListForAllocationResponseDto> getNdRequestListForAllocation(
 			final NdRequestListForAllocationDto filterCriteria) {
@@ -121,105 +119,117 @@ public class AllocateNDService {
 		logger.info("{} starts execution with input ndRequestId : {}", METHOD_NAME, ndRequestId);
 
 		final NdRequestDetailsForAllocationResponseDto dataDto = new NdRequestDetailsForAllocationResponseDto();
-		final NdRequest ndRequest = ndRequestRepository.findById(ndRequestId).get();
+		Optional<NdRequest> nd = ndRequestRepository.findById(ndRequestId);
+		NdRequest ndRequest = null;
+		if (nd.isPresent())
+			ndRequest = nd.get();
 
 		dataDto.setNdRequestId(ndRequestId);
-		dataDto.setResourceId(ndRequest.getEmployee1().getEmployeeId());
-		dataDto.setEmpCode(ndRequest.getEmployee1().getEmpCode());
-		dataDto.setEmpName(ndRequest.getEmployee1().getFullName());
-		dataDto.setTitle(ndRequest.getEmployee1().getTitle().getName());
-		dataDto.setProjectId(ndRequest.getProject().getProjectId());
-		dataDto.setProjectName(ndRequest.getProject().getName());
-		dataDto.setRequestedPercentage(ndRequest.getPercentage());
-		dataDto.setBillable(ndRequest.getIsBillable());
-		dataDto.setAvailablePercentage(
-				allocationUtilityService.getAvailablePercentageForND(ndRequest.getEmployee1().getEmployeeId()));
+		if (ndRequest != null) {
+			dataDto.setResourceId(ndRequest.getEmployee1().getEmployeeId());
+			dataDto.setEmpCode(ndRequest.getEmployee1().getEmpCode());
+			dataDto.setEmpName(ndRequest.getEmployee1().getFullName());
+			dataDto.setTitle(ndRequest.getEmployee1().getTitle().getName());
+			dataDto.setProjectId(ndRequest.getProject().getProjectId());
+			dataDto.setProjectName(ndRequest.getProject().getName());
+			dataDto.setRequestedPercentage(ndRequest.getPercentage());
+			dataDto.setBillable(ndRequest.getIsBillable());
+			dataDto.setAvailablePercentage(
+					allocationUtilityService.getAvailablePercentageForND(ndRequest.getEmployee1().getEmployeeId()));
 
-		final List<String> salesForceIdList = salesforceIdentifierRepository
-				.findByProjectId(ndRequest.getProject().getProjectId());
-		logger.debug("{} salesForceIdList : {} for project : {}", METHOD_NAME, salesForceIdList,
-				ndRequest.getProject().getProjectId());
-		dataDto.setProjectSalesforceIdList(salesForceIdList);
+			final List<String> salesForceIdList = salesforceIdentifierRepository
+					.findByProjectId(ndRequest.getProject().getProjectId());
+			logger.debug("{} salesForceIdList : {} for project : {}", METHOD_NAME, salesForceIdList,
+					ndRequest.getProject().getProjectId());
+			dataDto.setProjectSalesforceIdList(salesForceIdList);
 
-		final DateFormat df = new SimpleDateFormat("yyyy-MM-dd");
-		final String projectEndDate = df.format(ndRequest.getProject().getEndDate());
-		logger.debug("{} projectEndDate : {}", METHOD_NAME, projectEndDate);
-		dataDto.setProjectEndDate(projectEndDate);
+			final DateFormat df = new SimpleDateFormat(ApplicationConstants.DATE_FORMAT_YYYYMMDD);
+			final String projectEndDate = df.format(ndRequest.getProject().getEndDate());
+			logger.debug("{} projectEndDate : {}", METHOD_NAME, projectEndDate);
+			dataDto.setProjectEndDate(projectEndDate);
 
-		logger.debug("{} salesForceIdList : {}", METHOD_NAME, salesForceIdList);
-		dataDto.setNdRequestSalesforceIdList(ndRequestToNdRequestSalesforceIdList(ndRequest));
-		dataDto.getProjectSalesforceIdList().addAll(ndRequestToNdRequestSalesforceIdList(ndRequest));
+			logger.debug("{} salesForceIdList : {}", METHOD_NAME, salesForceIdList);
+			dataDto.setNdRequestSalesforceIdList(ndRequestToNdRequestSalesforceIdList(ndRequest));
+			dataDto.getProjectSalesforceIdList().addAll(ndRequestToNdRequestSalesforceIdList(ndRequest));
 
-		final String movementDate = CommonQualifiedMapper.getDateOfMovement().toString();
-		logger.debug("{} movementDate : {}", METHOD_NAME, movementDate);
-		dataDto.setMovementDate(movementDate);
+			final String movementDate = CommonQualifiedMapper.getDateOfMovement().toString();
+			logger.debug("{} movementDate : {}", METHOD_NAME, movementDate);
+			dataDto.setMovementDate(movementDate);
 
-		final Employee reportingManager = employeeRepository.findByEmployeeId(ndRequest.getEmployee2().getEmployeeId());
-		final UnitValue rptMgr = new UnitValue(reportingManager.getEmployeeId(), reportingManager.getFullName());
-		logger.debug("{} reporting manager : {}", METHOD_NAME, rptMgr.getValue());
-		dataDto.setReportingManager(rptMgr);
+			final Employee reportingManager = employeeRepository.findByEmployeeId(ndRequest.getEmployee2().getEmployeeId());
+			final UnitValue rptMgr = new UnitValue(reportingManager.getEmployeeId(), reportingManager.getFullName());
+			logger.debug("{} reporting manager : {}", METHOD_NAME, rptMgr.getValue());
+			dataDto.setReportingManager(rptMgr);
 
-		final List<Map<String, String>> managerList = allocationUtilityService
-				.projectToManagerList(ndRequest.getProject());
-		logger.debug("{} managerlist : {}", METHOD_NAME, managerList);
-		dataDto.setManagerList(managerList);
+			final List<Map<String, String>> managerList = allocationUtilityService
+					.projectToManagerList(ndRequest.getProject());
+			logger.debug("{} managerlist : {}", METHOD_NAME, managerList);
+			dataDto.setManagerList(managerList);
 
-		final List<Allocation> existingAllocationsInThisProject = allocationRepository
-				.findByEmployeeEmployeeIdAndProjectProjectIdAndIsActiveIsTrue(ndRequest.getEmployee1().getEmployeeId(),
-						ndRequest.getProject().getProjectId());
+			final List<Allocation> existingAllocationsInThisProject = allocationRepository
+					.findByEmployeeEmployeeIdAndProjectProjectIdAndIsActiveIsTrue(ndRequest.getEmployee1().getEmployeeId(),
+							ndRequest.getProject().getProjectId());
 
-		// Getting all the existing allocations of Employee
-		final List<ExistingAllocationDto> existingAllocations = new ArrayList<>();
-		if (existingAllocationsInThisProject != null) {
-			for (final Allocation allocation : existingAllocationsInThisProject) {
-				final String reportingManagerName = allocation.getReportingManagerId().getFullName();
+			// Getting all the existing allocations of Employee
+			final List<ExistingAllocationDto> existingAllocations = new ArrayList<>();
+			if (existingAllocationsInThisProject != null) {
+				for (final Allocation allocation : existingAllocationsInThisProject) {
+					final String reportingManagerName = allocation.getReportingManagerId().getFullName();
 
-				boolean isPrimary = false;
-				if (allocation.getAllocationId()
-						.equals(ndRequest.getEmployee1().getPrimaryAllocation().getAllocationId())) {
-					isPrimary = true;
+					boolean isPrimary = false;
+					if (allocation.getAllocationId()
+							.equals(ndRequest.getEmployee1().getPrimaryAllocation().getAllocationId())) {
+						isPrimary = true;
+					}
+
+					final ExistingAllocationDto existingAllocationDto = new ExistingAllocationDto(
+							Long.toString(allocation.getProjectLocation().getProjectLocationId()),
+							allocation.getProjectLocation().getLocation().getName(), allocation.getWorkGroup().getName(),
+							Long.toString(allocation.getReportingManagerId().getEmployeeId()), reportingManagerName,
+							isPrimary, CommonQualifiedMapper.dateToLocalDate(allocation.getReleaseDate()));
+					existingAllocations.add(existingAllocationDto);
 				}
-
-				final ExistingAllocationDto existingAllocationDto = new ExistingAllocationDto(
-						Long.toString(allocation.getProjectLocation().getProjectLocationId()),
-						allocation.getProjectLocation().getLocation().getName(), allocation.getWorkGroup().getName(),
-						Long.toString(allocation.getReportingManagerId().getEmployeeId()), reportingManagerName,
-						isPrimary, CommonQualifiedMapper.dateToLocalDate(allocation.getReleaseDate()));
-				existingAllocations.add(existingAllocationDto);
+				logger.debug("{} existingAllocations : {}", METHOD_NAME, existingAllocations);
+				dataDto.setExistingAllocationsInThisProject(existingAllocations);
 			}
-			logger.debug("{} existingAllocations : {}", METHOD_NAME, existingAllocations);
-			dataDto.setExistingAllocationsInThisProject(existingAllocations);
+
+			// Getting Allocation Summary here:
+			final List<AllocationSummaryDto> allocationSummary = allocationRepository
+					.getAllocationSummary(ndRequest.getEmployee1().getEmployeeId());
+			final Long primaryAllocationId = ndRequest.getEmployee1().getPrimaryAllocation().getAllocationId();
+
+			final Set<Allocation> empAllocations = allocationRepository
+					.findByEmployeeEmployeeIdAndIsActive(ndRequest.getEmployee1().getEmployeeId(), true);
+
+			final Map<Long, List<Allocation>> employeeAllocationMap = empAllocations.stream()
+					.collect(Collectors.groupingBy(a -> a.getProject().getProjectId()));
+
+			allocationSummary.forEach(a -> {
+				a.setReportingMangerName(a.getReportingManager().getFullName());
+				a.setIsPrimary(employeeAllocationMap.get(a.getProjectId()).stream()
+						.filter(i -> i.getAllocationId().equals(primaryAllocationId)).findAny().isPresent());
+			});
+
+			logger.debug("{} allocationSummary : {}", METHOD_NAME, allocationSummary);
+			dataDto.setAllocationSummary(allocationSummary);
+	
 		}
-
-		// Getting Allocation Summary here:
-		final List<AllocationSummaryDto> allocationSummary = allocationRepository
-				.getAllocationSummary(ndRequest.getEmployee1().getEmployeeId());
-		final Long primaryAllocationId = ndRequest.getEmployee1().getPrimaryAllocation().getAllocationId();
-
-		final Set<Allocation> empAllocations = allocationRepository
-				.findByEmployeeEmployeeIdAndIsActive(ndRequest.getEmployee1().getEmployeeId(), true);
-
-		final Map<Long, List<Allocation>> employeeAllocationMap = empAllocations.stream()
-				.collect(Collectors.groupingBy(a -> a.getProject().getProjectId()));
-
-		allocationSummary.forEach(a -> {
-			a.setReportingMangerName(a.getReportingManager().getFullName());
-			a.setIsPrimary(employeeAllocationMap.get(a.getProjectId()).stream()
-					.filter(i -> i.getAllocationId().equals(primaryAllocationId)).findAny().isPresent());
-		});
-
-		logger.debug("{} allocationSummary : {}", METHOD_NAME, allocationSummary);
-		dataDto.setAllocationSummary(allocationSummary);
-
+		
 		return dataDto;
 	}
 
 	@Transactional
 	public IsValidNDResponseDto isValidNDRequestAllocation(IsValidNDRequestDto dto) {
 		final String METHOD_NAME = "isValidNDRequestAllocation";
-		logger.info("{} starts execution with input validation : {}", METHOD_NAME);
+		logger.info("{} starts execution with input validation}", METHOD_NAME);
 		final IsValidNDResponseDto responseDto = new IsValidNDResponseDto();
-		final NdRequest ndRequest = ndRequestRepository.findById(dto.getNdRequestId()).get();
+		NdRequest ndRequest = null;
+		
+		Optional<NdRequest> nd = ndRequestRepository.findById(dto.getNdRequestId());
+		
+		if (nd.isPresent()) ndRequest = nd.get();
+		
+		if (ndRequest != null) {
 		final Long projectId = ndRequest.getProject().getProjectId();
 		final Optional<Project> project = projectRepository.findById(projectId);
 		final List<SalesforceIdentifier> salesforceIdentifierIdsList = salesforceIdentifierRepository
@@ -233,29 +243,25 @@ public class AllocateNDService {
 		logger.debug("{} availablePercentage : {}", METHOD_NAME, availablePercentage);
 
 		final List<Allocation> a = allocationRepository.findByEmployeeEmployeeIdAndProjectProjectIdAndIsActiveIsTrue(
-				Long.valueOf(dto.getResourceId()), projectId);
-		if (a.size() > 0) {
+				dto.getResourceId(), projectId);
+		if (!a.isEmpty()) {
 			for (final Allocation all : a)
-				if (all.getProjectLocation().getProjectLocationId().equals((Long.valueOf(dto.getProjectLocationId())))
-						&& all.getWorkGroup().getName().equals(dto.getWorkgroup()) && all.getReportingManagerId()
-								.getEmployeeId().equals(Long.valueOf(dto.getReportingManagerId()))) {
-					responseDto.setInvalidLocationWorkgroup(false);
-				} else {
-					responseDto.setInvalidLocationWorkgroup(true);
-				}
+					responseDto.setInvalidLocationWorkgroup(!(all.getProjectLocation().getProjectLocationId().equals((Long.valueOf(dto.getProjectLocationId())))
+							&& all.getWorkGroup().getName().equals(dto.getWorkgroup()) && all.getReportingManagerId()
+							.getEmployeeId().equals(Long.valueOf(dto.getReportingManagerId()))));
 		} else {
 			responseDto.setInvalidLocationWorkgroup(false);
 		}
 
 		Iterables.removeIf(dto.getRequestSalesforceIdList(), Predicates.isNull());
-		if (dto.getRequestSalesforceIdList().size() > 0) {
+		if (!dto.getRequestSalesforceIdList().isEmpty()) {
 
 			for (final SalesforceIdentifier id : salesforceIdentifierIdsList) {
 				dto.getRequestSalesforceIdList().remove(id.getValue());
 			}
 
 			for (final String id : dto.getRequestSalesforceIdList()) {
-				if (!identifierService.isValidSalesforceIdForProject(id, project.get().getProjectId())) {
+				if (project.isPresent() && !identifierService.isValidSalesforceIdForProject(id, project.get().getProjectId())) {
 					responseDto.setInvalidSalesforceIdList(true);
 					break;
 				} else {
@@ -264,25 +270,10 @@ public class AllocateNDService {
 			}
 		}
 
-		if (dto.getPercentage() > availablePercentage) {
-			responseDto.setInvalidAllocationPercentage(true);
-		} else {
-			responseDto.setInvalidAllocationPercentage(false);
-		}
-
-		if (dto.getPercentage() > 100) {
-			responseDto.setInvalidAllocationPercentage(true);
-		} else {
-			responseDto.setInvalidAllocationPercentage(false);
-		}
+		responseDto.setInvalidAllocationPercentage((dto.getPercentage() > availablePercentage || dto.getPercentage() > 100));
 
 		final Date releaseDate = Date.from(dto.getReleaseDate().atZone(ZoneId.systemDefault()).toInstant());
-		// final Optional<Project> project = projectRepository.findById(projectId);
-		if (project.get().getEndDate().compareTo(releaseDate) < 0) {
-			responseDto.setInvalidReleaseDateAfterProjectDate(true);
-		} else {
-			responseDto.setInvalidReleaseDateAfterProjectDate(false);
-		}
+		responseDto.setInvalidReleaseDateAfterProjectDate((project.isPresent() && project.get().getEndDate().compareTo(releaseDate) < 0));
 		final DayOfWeek day = DayOfWeek.of(dto.getReleaseDate().get(ChronoField.DAY_OF_WEEK));
 		switch (day) {
 		case SATURDAY:
@@ -295,7 +286,7 @@ public class AllocateNDService {
 			responseDto.setInvalidReleaseDateOnWeekend(false);
 			break;
 		}
-
+		}
 		return responseDto;
 
 	}
@@ -320,58 +311,69 @@ public class AllocateNDService {
 			}
 		}
 
-		final Map<Long, Set<Allocation>> empAllocationsMap = new HashMap<Long, Set<Allocation>>();
+		final Map<Long, Set<Allocation>> empAllocationsMap = new HashMap<>();
 
 		for (final NDAllocateRequestDto ndAllocateRequestDto : ndAllocateRequests) {
-			final NdRequest ndRequest = ndRequestRepository.findById(ndAllocateRequestDto.getRequestId()).get();
+			NdRequest ndRequest = null;
+			
+			Optional<NdRequest> nd = ndRequestRepository.findById(ndAllocateRequestDto.getRequestId());
+			
+			if (nd.isPresent()) ndRequest = nd.get();
 			final List<String> requestSalesforceIdList = ndAllocateRequestDto.getRequestSalesforceIdList();
 
 			// Get Extra SalesForceIds in the Request:
-			final List<SalesforceIdentifier> salesforceIdentifierIdsList = salesforceIdentifierRepository
-					.findByProjectProjectIdAndIsActiveIsTrue(Long.valueOf(ndRequest.getProject().getProjectId()));
-			for (final SalesforceIdentifier id : salesforceIdentifierIdsList) {
-				requestSalesforceIdList.remove(id.getValue());
+			if (ndRequest != null) {
+				final List<SalesforceIdentifier> salesforceIdentifierIdsList = salesforceIdentifierRepository
+						.findByProjectProjectIdAndIsActiveIsTrue(ndRequest.getProject().getProjectId());
+				for (final SalesforceIdentifier id : salesforceIdentifierIdsList) {
+					requestSalesforceIdList.remove(id.getValue());
+				}
+				logger.debug("requestSalesforceIdList:{}", requestSalesforceIdList);
+
+				Optional<Project> p = projectRepository.findById(ndRequest.getProject().getProjectId());
+				final Project project = p.isPresent()? p.get() : null;
+				final WorkGroup workGroup = workGroupRepository.findByName(ndAllocateRequestDto.getWorkgroup());
+				final Optional<ProjectLocation> projectLocation = projectLocationRespository
+						.findById(Long.valueOf(ndAllocateRequestDto.getProjectLocationId()));
+				final Project ndBenchProject = projectRepository.findByName("NDBench");
+				final List<Allocation> allocation = allocationRepository
+						.findByEmployeeEmployeeIdAndProjectProjectIdAndIsActiveIsTrue(
+								ndAllocateRequestDto.getResourceId(), ndBenchProject.getProjectId());
+				final Long ndBenchAllocationId = allocation.get(0).getAllocationId();
+
+				final NDBenchAllocationRequestDto ndBenchAllocationRequestDto = new NDBenchAllocationRequestDto(
+						ndBenchAllocationId, ndAllocateRequestDto.getResourceId(),
+						String.valueOf(
+								projectLocation.isPresent() ? projectLocation.get().getProjectLocationId() : null),
+						workGroup.getName(), String.valueOf(ndAllocateRequestDto.getReportingManagerId()),
+						requestSalesforceIdList, ndAllocateRequestDto.getPercentage(),
+						LocalDate.parse(ndAllocateRequestDto.getStartDate()), ndAllocateRequestDto.getReleaseDate(),
+						ndAllocateRequestDto.getBillable(), ndAllocateRequestDto.getIsPrimaryManager(),
+						String.valueOf((project != null)?project.getProjectId():null));
+
+				final AllocationRequestDto allocationRequestDto = new AllocationRequestDto(ndBenchAllocationRequestDto);
+				final Allocation toAllocation = allocationService.allocate(allocationRequestDto);
+
+				// Update the NDRequest status as False against which the User got the
+				// Allocation.
+				ndRequestRepository.updateNDRequestStatus(ndAllocateRequestDto.getRequestId(), Boolean.FALSE);
+
+				// Auto-Cancel all the ND-Requests where "Requested Percentage" is greater than
+				// "Available Percentage".
+				autoCancelNDRequests(ndRequest.getEmployee1().getEmployeeId());
+
+				// Send Mail for ND-Allocation.
+				mailForAllocateRequestedNd(toAllocation, project, ndAllocateRequestDto);
+
+				ndAllocateResponseDto.setFailedRequestIdList(new ArrayList<>());
+				empAllocationsMap.computeIfAbsent(ndAllocateRequestDto.getResourceId(), k -> new HashSet<Allocation>());
+				empAllocationsMap.get(ndAllocateRequestDto.getResourceId()).add(toAllocation);
+
 			}
-			logger.debug("requestSalesforceIdList:{}", requestSalesforceIdList);
 
-			final Project project = projectRepository.findById(ndRequest.getProject().getProjectId()).get();
-			final WorkGroup workGroup = workGroupRepository.findByName(ndAllocateRequestDto.getWorkgroup());
-			final Optional<ProjectLocation> projectLocation = projectLocationRespository
-					.findById(Long.valueOf(ndAllocateRequestDto.getProjectLocationId()));
-			final Project ndBenchProject = projectRepository.findByName("NDBench");
-			final List<Allocation> allocation = allocationRepository
-					.findByEmployeeEmployeeIdAndProjectProjectIdAndIsActiveIsTrue(ndAllocateRequestDto.getResourceId(),
-							ndBenchProject.getProjectId());
-			final Long ndBenchAllocationId = allocation.get(0).getAllocationId();
-
-			final NDBenchAllocationRequestDto ndBenchAllocationRequestDto = new NDBenchAllocationRequestDto(
-					ndBenchAllocationId, ndAllocateRequestDto.getResourceId(),
-					String.valueOf(projectLocation.get().getProjectLocationId()), workGroup.getName(),
-					String.valueOf(ndAllocateRequestDto.getReportingManagerId()), requestSalesforceIdList,
-					ndAllocateRequestDto.getPercentage(), LocalDate.parse(ndAllocateRequestDto.getStartDate()),
-					ndAllocateRequestDto.getReleaseDate(), ndAllocateRequestDto.getBillable(),
-					ndAllocateRequestDto.getIsPrimaryManager(), String.valueOf(project.getProjectId()));
-
-			final AllocationRequestDto allocationRequestDto = new AllocationRequestDto(ndBenchAllocationRequestDto);
-			final Allocation toAllocation = allocationService.allocate(allocationRequestDto);
-
-			// Update the NDRequest status as False against which the User got the
-			// Allocation.
-			ndRequestRepository.updateNDRequestStatus(ndAllocateRequestDto.getRequestId(), Boolean.FALSE);
-
-			// Auto-Cancel all the ND-Requests where "Requested Percentage" is greater than
-			// "Available Percentage".
-			autoCancelNDRequests(ndRequest.getEmployee1().getEmployeeId());
-
-			// Send Mail for ND-Allocation.
-			mailForAllocateRequestedNd(toAllocation, project, ndAllocateRequestDto);
-
-			ndAllocateResponseDto.setFailedRequestIdList(new ArrayList<>());
-			empAllocationsMap.computeIfAbsent(ndAllocateRequestDto.getResourceId(), k -> new HashSet<Allocation>());
-			empAllocationsMap.get(ndAllocateRequestDto.getResourceId()).add(toAllocation);
 		}
 
-		if (empAllocationsMap != null && empAllocationsMap.size() > 0) {
+		if (empAllocationsMap.size() > 0) {
 
 			empAllocationsMap.entrySet().forEach(a -> {
 				if (a.getValue() != null && a.getValue().size() > 1) {
@@ -407,10 +409,10 @@ public class AllocateNDService {
 
 				final Long projectId = ndRequest.getProject().getProjectId();
 				final List<Allocation> existingAllocations = allocationRepository
-						.findByEmployeeEmployeeIdAndProjectProjectIdAndIsActiveIsTrue(Long.valueOf(dto.getResourceId()),
+						.findByEmployeeEmployeeIdAndProjectProjectIdAndIsActiveIsTrue(dto.getResourceId(),
 								projectId);
 
-				if (existingAllocations.size() > 0) {
+				if (!existingAllocations.isEmpty()) {
 					for (final Allocation allocation : existingAllocations)
 						if (!allocation.getProjectLocation().getProjectLocationId()
 								.equals((Long.valueOf(dto.getProjectLocationId())))
@@ -439,7 +441,7 @@ public class AllocateNDService {
 			logger.debug("{} ndRequestId : {}, requestedPecentage : {}, availablePercentage : {}", METHOD_NAME,
 					ndRequestId, requestedPecentage, availablePercentage);
 			if (requestedPecentage > availablePercentage) {
-				logger.debug("{} inside if block for cancelling the request : {}", ndRequestId);
+				logger.debug("inside if block for cancelling the request : {}", ndRequestId);
 				ndRequestRepository.updateNDRequestStatus(ndRequestId, Boolean.FALSE);
 
 				try {
@@ -464,7 +466,7 @@ public class AllocateNDService {
 			if (percentage != null && percentage != 0) {
 				percentage = percentage + ndAllocateRequestDto.getPercentage();
 			} else {
-				percentage = new Long(ndAllocateRequestDto.getPercentage());
+				percentage = Long.valueOf(ndAllocateRequestDto.getPercentage());
 			}
 			logger.debug("{} resourceId : {}, percentage: {}", METHOD_NAME, resourceId, percentage);
 			dataMap.put(resourceId, percentage);
@@ -495,15 +497,14 @@ public class AllocateNDService {
 		templateModel.put("newProjectName", a.getProject().getName());
 		logger.debug("{} projectName : {}", METHOD_NAME, a.getProject().getName());
 		final String dateOfMovement = ndAllocateRequestDto.getStartDate();
-		final SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
-		final SimpleDateFormat sdf2 = new SimpleDateFormat("dd-MMM-YYYY");
+		final SimpleDateFormat sdf = new SimpleDateFormat(ApplicationConstants.DATE_FORMAT_YYYYMMDD);
+		final SimpleDateFormat sdf2 = new SimpleDateFormat(ApplicationConstants.DATE_FORMAT_DD_MMM_YYYY);
 		try {
 			templateModel.put("dateOfMovement", sdf2.format(sdf.parse(dateOfMovement)));
 		} catch (final ParseException e) {
 			throw new EmpConnException("DefaultError");
 		}
 
-		// templateModel.put("projectName", a.getName());
 		templateModel.put("managerName",
 				a.getReportingManagerId().getFirstName() + " " + a.getReportingManagerId().getLastName());
 
@@ -541,7 +542,7 @@ public class AllocateNDService {
 			templateModel.put("projectName", ndRequest.getProject().getName());
 			templateModel.put("allocation", ndRequest.getPercentage());
 			logger.debug("{} percentage : {} ", METHOD_NAME, ndRequest.getPercentage());
-			final SimpleDateFormat sdf1 = new SimpleDateFormat("dd-MMM-YYYY");
+			final SimpleDateFormat sdf1 = new SimpleDateFormat(ApplicationConstants.DATE_FORMAT_DD_MMM_YYYY);
 			final Date startDate = ndRequest.getStartDate();
 			final Date tentativeReleaseEndDate = ndRequest.getReleaseDate();
 			templateModel.put("allocStartDate", sdf1.format(startDate));
@@ -577,8 +578,8 @@ public class AllocateNDService {
 			templateModel.put("requestedAccount", ndRequest.getProject().getAccount().getName());
 			templateModel.put("requestedProject", ndRequest.getProject().getName());
 			templateModel.put("allocation", ndRequest.getPercentage());
-			templateModel.put("startDate", new SimpleDateFormat("dd-MMM-YYYY").format(ndRequest.getStartDate()));
-			templateModel.put("endDate", new SimpleDateFormat("dd-MMM-YYYY").format(ndRequest.getReleaseDate()));
+			templateModel.put("startDate", new SimpleDateFormat(ApplicationConstants.DATE_FORMAT_DD_MMM_YYYY).format(ndRequest.getStartDate()));
+			templateModel.put("endDate", new SimpleDateFormat(ApplicationConstants.DATE_FORMAT_DD_MMM_YYYY).format(ndRequest.getReleaseDate()));
 			String devGDMEmail = "";
 			if (ndRequest.getProject().getEmployee1() != null)
 				devGDMEmail = ndRequest.getProject().getEmployee1().getEmail();
